# test-nep145-upgrade

./: Cargo.toml  build-and-run.sh
test-crate/: Cargo.toml
test-crate/src/: main.rs
with-nep145/: Cargo.toml
with-nep145/src/: lib.rs
without-nep145/: Cargo.toml
without-nep145/src/: lib.rs
