[workspace]
resolver = "2"
members = ["without-nep145", "with-nep145", "test-crate"]

[workspace.dependencies]
near-contract-standards = "4.1.1"
near-sdk = "4.1.1"
workspaces = "0.7.0"
tokio = "1.32.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
